[gd_scene load_steps=70 format=3 uid="uid://dnt83c1g3ypdm"]

[ext_resource type="Script" path="res://script/save_file.gd" id="1_ck3lj"]
[ext_resource type="FontFile" uid="uid://coc7nbgt47g7s" path="res://assets/fonts/PixelOperator8.ttf" id="1_d12bb"]
[ext_resource type="FontFile" uid="uid://4bg25lw7xo2c" path="res://assets/fonts/Chokokutai/Chokokutai-Regular.ttf" id="1_s37e0"]
[ext_resource type="Texture2D" uid="uid://ctsr2yl622jyc" path="res://assets/Leah_2.webp" id="3_4l33d"]
[ext_resource type="Texture2D" uid="uid://duvdfoylelftd" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Grass-Buttons-arrow2.png" id="5_4hao2"]
[ext_resource type="Texture2D" uid="uid://bkjvr8bd6yyau" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-arrow2.png" id="5_lnahs"]
[ext_resource type="Texture2D" uid="uid://baaadjximhdm" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Buttons-x.png" id="7_iwl3y"]
[ext_resource type="Texture2D" uid="uid://dthbchp451dw5" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-x.png" id="7_ykdji"]
[ext_resource type="Texture2D" uid="uid://db761uy8k6hr2" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Buttons-question.png" id="9_ob85q"]
[ext_resource type="FontFile" uid="uid://ba8w6pudjptl8" path="res://assets/fonts/Gluten-Black.ttf" id="9_uqqek"]
[ext_resource type="Texture2D" uid="uid://ch8d111cd3mhx" path="res://assets/UI - icons/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-question.png" id="10_csobe"]
[ext_resource type="FontFile" uid="uid://ddhvjmcfs30qa" path="res://assets/fonts/Itim/Itim-Regular.ttf" id="10_ilnns"]
[ext_resource type="Texture2D" uid="uid://db57rbp2trtct" path="res://assets/ButtonsText/PremadeButtons_XGreen.png" id="13_3dvfi"]
[ext_resource type="Texture2D" uid="uid://jy2so4aa8iy3" path="res://assets/ButtonsText/PremadeButtons_XRed.png" id="14_w30sj"]
[ext_resource type="Texture2D" uid="uid://br3ftlecnpgus" path="res://assets/CharacterAnimations/Idle.png" id="15_6h2qh"]
[ext_resource type="Texture2D" uid="uid://cvov7xuxnhm4i" path="res://assets/BoxesBanners/TextBox_Blank_Middle.png" id="16_ql535"]
[ext_resource type="Texture2D" uid="uid://c6o6g6wusyswe" path="res://assets/UI - icons/Icons/Heart.png" id="18_4jih5"]
[ext_resource type="Texture2D" uid="uid://bvaojy6xe2nq5" path="res://assets/BoxesBanners/Box_Blank_Rounded.png" id="18_mcd6p"]
[ext_resource type="FontFile" uid="uid://cjepuacwhswt0" path="res://assets/fonts/Mogra/Mogra-Regular.ttf" id="19_falmk"]
[ext_resource type="Texture2D" uid="uid://dlqutd8t6lqdw" path="res://assets/UI - icons/Icons/Ray.png" id="20_51u2y"]
[ext_resource type="Texture2D" uid="uid://0kma0erxyqjb" path="res://assets/slime/SmallSlime_Green.png" id="22_0wv5s"]
[ext_resource type="Texture2D" uid="uid://bsruw307vxorg" path="res://assets/Icons/Icon_Small_Blank_X.png" id="23_vhmhp"]
[ext_resource type="Texture2D" uid="uid://fsoo0wa8pqft" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_000.png" id="24_pgckw"]
[ext_resource type="Texture2D" uid="uid://jiwnoc60oovw" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_001.png" id="25_gbdyj"]
[ext_resource type="Texture2D" uid="uid://ncutkspqcddq" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_002.png" id="26_kcm1k"]
[ext_resource type="Texture2D" uid="uid://dy7t40v845l4k" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_003.png" id="27_rsuy0"]
[ext_resource type="Texture2D" uid="uid://c0axv4jku3r56" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_004.png" id="28_ndt47"]
[ext_resource type="Texture2D" uid="uid://dgyig1td58b38" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_005.png" id="29_oxydc"]
[ext_resource type="Texture2D" uid="uid://vw84t5xrcqvv" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_006.png" id="30_4rgg5"]
[ext_resource type="Texture2D" uid="uid://bgrbvwawujkb6" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_007.png" id="31_lvyai"]
[ext_resource type="Texture2D" uid="uid://br6ncjki8x75v" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_008.png" id="32_4llh2"]
[ext_resource type="Texture2D" uid="uid://c5fbu1jjxygoj" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_009.png" id="33_3fk3m"]
[ext_resource type="Texture2D" uid="uid://bkjmdhkaakicb" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_010.png" id="34_ugg6s"]
[ext_resource type="Texture2D" uid="uid://bgkd73uuohu2j" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_011.png" id="35_uyqre"]
[ext_resource type="Texture2D" uid="uid://crqmkq1jb4mwy" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_012.png" id="36_1brvy"]
[ext_resource type="Texture2D" uid="uid://cxic0ledhdtik" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_013.png" id="37_sy42o"]
[ext_resource type="Texture2D" uid="uid://bld682okmyg7i" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_014.png" id="38_rtn52"]
[ext_resource type="Texture2D" uid="uid://fgf8cdh1pam7" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_015.png" id="39_huhhb"]
[ext_resource type="Texture2D" uid="uid://bwux6blurjb5p" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_016.png" id="40_tnrr4"]
[ext_resource type="Texture2D" uid="uid://dns86atdn21bj" path="res://assets/Zombie_Villager_2/PNG/PNG Sequences/Idle Blinking/0_Zombie_Villager_Idle Blinking_017.png" id="41_vivju"]
[ext_resource type="Texture2D" uid="uid://b0khl8q76sutn" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_000.png" id="42_pkp6h"]
[ext_resource type="Texture2D" uid="uid://cg4mseaah401m" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_001.png" id="43_daiax"]
[ext_resource type="Texture2D" uid="uid://cmmmyxojfripp" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_002.png" id="44_1gfge"]
[ext_resource type="Texture2D" uid="uid://678psukyy2r3" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_003.png" id="45_e1n1i"]
[ext_resource type="Texture2D" uid="uid://dmi5vkae3l38w" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_004.png" id="46_oeir6"]
[ext_resource type="Texture2D" uid="uid://crtpi2ntxffb7" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_005.png" id="47_x3cg7"]
[ext_resource type="Texture2D" uid="uid://0f1iggibpu35" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_006.png" id="48_hm21u"]
[ext_resource type="Texture2D" uid="uid://bd40ciqbllepa" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_007.png" id="49_mrvav"]
[ext_resource type="Texture2D" uid="uid://dhctkek64gml3" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_008.png" id="50_4shjl"]
[ext_resource type="Texture2D" uid="uid://dbp4lq7rt8f40" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_009.png" id="51_n8vgi"]
[ext_resource type="Texture2D" uid="uid://chev82didi6jb" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_010.png" id="52_gow4a"]
[ext_resource type="Texture2D" uid="uid://bar7f8bt36k4u" path="res://assets/wraith/Wraith_01/PNG Sequences/Idle Blink/Wraith_01_Idle Blinking_011.png" id="53_4lnve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smqxl"]
bg_color = Color(0.999999, 0.897447, 0.652739, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.296328, 0.138047, 0.0694769, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrh32"]
bg_color = Color(0.924098, 0.939267, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2n1d"]
bg_color = Color(0.0470588, 0.321569, 0.470588, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_064wq"]
bg_color = Color(0, 0.348387, 0.332362, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amfj0"]
bg_color = Color(0, 0.348387, 0.332362, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldac4"]
bg_color = Color(0, 0.690228, 0.660622, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdcug"]
bg_color = Color(1, 0.968627, 0.894118, 1)
border_width_left = 15
border_width_top = 10
border_width_right = 15
border_width_bottom = 30
border_color = Color(0.454902, 0.333333, 0.45098, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="AtlasTexture" id="AtlasTexture_munrb"]
atlas = ExtResource("15_6h2qh")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhvwx"]
atlas = ExtResource("15_6h2qh")
region = Rect2(512, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijj62"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_munrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhvwx")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1a7yf"]
atlas = ExtResource("22_0wv5s")
region = Rect2(0, 696, 310, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv8kj"]
atlas = ExtResource("22_0wv5s")
region = Rect2(310, 696, 310, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7dqb"]
atlas = ExtResource("22_0wv5s")
region = Rect2(620, 696, 310, 232)

[sub_resource type="AtlasTexture" id="AtlasTexture_huxwg"]
atlas = ExtResource("22_0wv5s")
region = Rect2(930, 696, 310, 232)

[sub_resource type="SpriteFrames" id="SpriteFrames_srxun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a7yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv8kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7dqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huxwg")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_k61s0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_pgckw")
}, {
"duration": 1.0,
"texture": ExtResource("25_gbdyj")
}, {
"duration": 1.0,
"texture": ExtResource("26_kcm1k")
}, {
"duration": 1.0,
"texture": ExtResource("27_rsuy0")
}, {
"duration": 1.0,
"texture": ExtResource("28_ndt47")
}, {
"duration": 1.0,
"texture": ExtResource("29_oxydc")
}, {
"duration": 1.0,
"texture": ExtResource("30_4rgg5")
}, {
"duration": 1.0,
"texture": ExtResource("31_lvyai")
}, {
"duration": 1.0,
"texture": ExtResource("32_4llh2")
}, {
"duration": 1.0,
"texture": ExtResource("33_3fk3m")
}, {
"duration": 1.0,
"texture": ExtResource("34_ugg6s")
}, {
"duration": 1.0,
"texture": ExtResource("35_uyqre")
}, {
"duration": 1.0,
"texture": ExtResource("36_1brvy")
}, {
"duration": 1.0,
"texture": ExtResource("37_sy42o")
}, {
"duration": 1.0,
"texture": ExtResource("38_rtn52")
}, {
"duration": 1.0,
"texture": ExtResource("39_huhhb")
}, {
"duration": 1.0,
"texture": ExtResource("40_tnrr4")
}, {
"duration": 1.0,
"texture": ExtResource("41_vivju")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ywlaq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_pkp6h")
}, {
"duration": 1.0,
"texture": ExtResource("43_daiax")
}, {
"duration": 1.0,
"texture": ExtResource("44_1gfge")
}, {
"duration": 1.0,
"texture": ExtResource("45_e1n1i")
}, {
"duration": 1.0,
"texture": ExtResource("46_oeir6")
}, {
"duration": 1.0,
"texture": ExtResource("47_x3cg7")
}, {
"duration": 1.0,
"texture": ExtResource("48_hm21u")
}, {
"duration": 1.0,
"texture": ExtResource("49_mrvav")
}, {
"duration": 1.0,
"texture": ExtResource("50_4shjl")
}, {
"duration": 1.0,
"texture": ExtResource("51_n8vgi")
}, {
"duration": 1.0,
"texture": ExtResource("52_gow4a")
}, {
"duration": 1.0,
"texture": ExtResource("53_4lnve")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="SaveFile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ck3lj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 951.0
offset_bottom = 151.0
theme_override_styles/panel = SubResource("StyleBoxFlat_smqxl")

[node name="username" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 631.0
offset_top = -11.0
offset_right = 936.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0.419608, 0.196078, 0.137255, 1)
theme_override_fonts/font = ExtResource("1_s37e0")
theme_override_font_sizes/font_size = 64
text = "username"
horizontal_alignment = 2

[node name="roundNo" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 856.0
offset_top = 90.0
offset_right = 914.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0.419608, 0.196078, 0.137255, 1)
theme_override_fonts/font = ExtResource("1_d12bb")
theme_override_font_sizes/font_size = 24
text = "12"
horizontal_alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 723.0
offset_top = 92.0
offset_right = 873.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(0.419608, 0.196078, 0.137255, 1)
theme_override_fonts/font = ExtResource("1_d12bb")
theme_override_font_sizes/font_size = 24
text = "Round ->"

[node name="profileIcon" type="Sprite2D" parent="."]
position = Vector2(80, 73)
scale = Vector2(0.495496, 0.495496)
texture = ExtResource("3_4l33d")
flip_h = true

[node name="buttons" type="CanvasGroup" parent="."]

[node name="play" type="TextureButton" parent="buttons"]
offset_left = 175.0
offset_top = 43.0
offset_right = 238.0
offset_bottom = 106.0
texture_normal = ExtResource("5_4hao2")
texture_pressed = ExtResource("5_lnahs")
ignore_texture_size = true
stretch_mode = 0

[node name="delete" type="TextureButton" parent="buttons"]
offset_left = 256.0
offset_top = 43.0
offset_right = 319.0
offset_bottom = 106.0
texture_normal = ExtResource("7_iwl3y")
texture_pressed = ExtResource("7_ykdji")
ignore_texture_size = true
stretch_mode = 0

[node name="stat" type="TextureButton" parent="buttons"]
offset_left = 332.0
offset_top = 43.0
offset_right = 395.0
offset_bottom = 106.0
texture_normal = ExtResource("9_ob85q")
texture_pressed = ExtResource("10_csobe")
ignore_texture_size = true
stretch_mode = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Delete Conformation"
initial_position = 1
size = Vector2i(320, 106)
always_on_top = true
ok_button_text = "Confirm"
dialog_text = "Do you really want to delete this save?"

[node name="PasswordConfirmation" type="Node" parent="."]

[node name="passArea" type="Panel" parent="PasswordConfirmation"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -100.0
offset_right = 165.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xrh32")

[node name="password_entry" type="LineEdit" parent="PasswordConfirmation/passArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -72.0
offset_right = 140.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_s37e0")
theme_override_styles/normal = SubResource("StyleBoxFlat_y2n1d")
placeholder_text = "Enter Password"
alignment = 1

[node name="confirmButton" type="Button" parent="PasswordConfirmation/passArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = 45.0
offset_right = -1.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_uqqek")
theme_override_styles/focus = SubResource("StyleBoxFlat_064wq")
theme_override_styles/hover = SubResource("StyleBoxFlat_amfj0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amfj0")
theme_override_styles/normal = SubResource("StyleBoxFlat_ldac4")
text = "Confirm"

[node name="cancelButton" type="Button" parent="PasswordConfirmation/passArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 45.0
offset_right = 105.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_uqqek")
theme_override_styles/focus = SubResource("StyleBoxFlat_064wq")
theme_override_styles/hover = SubResource("StyleBoxFlat_amfj0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_amfj0")
theme_override_styles/normal = SubResource("StyleBoxFlat_ldac4")
text = "Cancel"

[node name="attempt" type="Label" parent="PasswordConfirmation/passArea"]
layout_mode = 0
offset_left = 139.0
offset_top = 106.0
offset_right = 195.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_ilnns")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="error" type="Label" parent="PasswordConfirmation/passArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 81.0
offset_right = 95.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.694704, 2.64719e-06, 3.85046e-07, 1)
theme_override_fonts/font = ExtResource("10_ilnns")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="stat" type="Node" parent="."]

[node name="stat-screen" type="Panel" parent="stat"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -203.0
offset_right = 241.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdcug")

[node name="closeButton" type="TextureButton" parent="stat/stat-screen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = -24.0
offset_right = 25.0
offset_bottom = 44.0
grow_horizontal = 0
texture_normal = ExtResource("13_3dvfi")
texture_pressed = ExtResource("14_w30sj")
ignore_texture_size = true
stretch_mode = 0

[node name="VBox" type="VBoxContainer" parent="stat/stat-screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 10.0
offset_right = -14.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="player" type="AnimatedSprite2D" parent="stat/stat-screen/VBox"]
position = Vector2(126, 228)
scale = Vector2(0.366699, 0.417995)
sprite_frames = SubResource("SpriteFrames_ijj62")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.129155

[node name="playerStat" type="Sprite2D" parent="stat/stat-screen/VBox/player"]
position = Vector2(-34.3651, -362.445)
scale = Vector2(0.462088, 0.4821)
texture = ExtResource("16_ql535")

[node name="desc" type="Label" parent="stat/stat-screen/VBox/player/playerStat"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1064.08
offset_top = -293.759
offset_right = -73.0805
offset_bottom = -177.759
grow_horizontal = 2
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("10_ilnns")
theme_override_font_sizes/font_size = 96
text = "Player-Status"
horizontal_alignment = 1

[node name="heart" type="TextureRect" parent="stat/stat-screen/VBox/player/playerStat"]
offset_left = -468.573
offset_top = -164.326
offset_right = -304.573
offset_bottom = -36.3255
texture = ExtResource("18_4jih5")

[node name="healthLabel" type="Label" parent="stat/stat-screen/VBox/player/playerStat"]
offset_left = -267.92
offset_top = -158.823
offset_right = 479.08
offset_bottom = -30.8227
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_falmk")
theme_override_font_sizes/font_size = 128
text = "Health : 200"

[node name="speed" type="TextureRect" parent="stat/stat-screen/VBox/player/playerStat"]
offset_left = -468.573
offset_top = -19.3606
offset_right = -304.573
offset_bottom = 108.639
texture = ExtResource("20_51u2y")

[node name="speedLabel" type="Label" parent="stat/stat-screen/VBox/player/playerStat"]
offset_left = -273.822
offset_top = -14.1833
offset_right = 473.178
offset_bottom = 113.817
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_falmk")
theme_override_font_sizes/font_size = 128
text = "Speed  : 400"

[node name="kill&death" type="Sprite2D" parent="stat/stat-screen/VBox"]
position = Vector2(325, 190)
scale = Vector2(0.134437, 0.233775)
texture = ExtResource("18_mcd6p")

[node name="desc" type="Label" parent="stat/stat-screen/VBox/kill&death"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1365.0
offset_top = -684.0
offset_right = -138.0
offset_bottom = -599.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("10_ilnns")
theme_override_font_sizes/font_size = 120
text = "Kill & Death 
Counts"
horizontal_alignment = 1

[node name="slime-ani" type="AnimatedSprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-368.202, -347.178)
scale = Vector2(1.80097, 1.80097)
sprite_frames = SubResource("SpriteFrames_srxun")
frame_progress = 0.116409

[node name="cross" type="Sprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-29.7537, -295.156)
scale = Vector2(0.75, 0.75)
texture = ExtResource("23_vhmhp")

[node name="zombie-ani" type="AnimatedSprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-375.64, 42.085)
scale = Vector2(0.933935, 0.543559)
sprite_frames = SubResource("SpriteFrames_k61s0")
frame_progress = 0.153338

[node name="cross2" type="Sprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-29.7537, 76.9971)
scale = Vector2(0.75, 0.75)
texture = ExtResource("23_vhmhp")

[node name="wraith-ani" type="AnimatedSprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-375.64, 499.79)
scale = Vector2(1.49072, 1.36938)
sprite_frames = SubResource("SpriteFrames_ywlaq")
frame_progress = 0.52728

[node name="cross3" type="Sprite2D" parent="stat/stat-screen/VBox/kill&death"]
position = Vector2(-29.7537, 483.371)
scale = Vector2(0.75, 0.75)
texture = ExtResource("23_vhmhp")

[node name="slime" type="Label" parent="stat/stat-screen"]
layout_mode = 0
offset_left = 354.0
offset_top = 118.0
offset_right = 434.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_falmk")
theme_override_font_sizes/font_size = 32
text = "999"

[node name="zombie" type="Label" parent="stat/stat-screen"]
layout_mode = 0
offset_left = 355.0
offset_top = 203.0
offset_right = 435.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_falmk")
theme_override_font_sizes/font_size = 32
text = "999"

[node name="wraith" type="Label" parent="stat/stat-screen"]
layout_mode = 0
offset_left = 357.0
offset_top = 295.0
offset_right = 437.0
offset_bottom = 327.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_falmk")
theme_override_font_sizes/font_size = 32
text = "999"

[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="buttons/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="buttons/stat" to="." method="_on_stat_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="PasswordConfirmation/passArea/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="PasswordConfirmation/passArea/cancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="stat/stat-screen/closeButton" to="." method="_on_button_pressed"]
